--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'org.webjars:webjars-locator-core'
 
     implementation 'com.yahoofinance-api:YahooFinanceAPI:3.15.0'
+    implementation 'org.json:json:20210307'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
