--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-chat-chat-practice-0:
-  0:
-    1-SNAPSHOT:
-      jar:
+
 server:
   port: 8080
 
@@ -33,8 +30,7 @@ logging:
         chat: DEBUG
 
 
-polygon:
+data-go-kr:
   api:
-    key: 1zUVA_2C3CwGTWBazIunswBEXffYMuDw
-    baseUrl: https://api.polygon.io
-
+    key: qKOCJtDk7u9vRM743o9NTAYykvtyaUOFp6nsdUa022CX0nDPl2F04E1%2FekoL0Rd72EjqFvJZy0JJnSPlDNT3uA%3D%3D
+    endPoint: https://apis.data.go.kr
