--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'org.webjars:stomp-websocket:2.3.4'
     implementation 'org.webjars:webjars-locator-core'
     implementation 'org.json:json:20231013'
+    implementation("org.apache.httpcomponents.client5:httpclient5:5.2.1")
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
